fixed responsiveness window when too small

--- a/src/components/DisplayFile.module.scss
+++ b/src/components/DisplayFile.module.scss
@@ -4,6 +4,14 @@
   height: 85%;
   padding: 0.5rem;
   margin: 0.2rem;
+  width: 100%;
+
+}
+
+@media (max-width: 1000px) {
+  .item-list {
+    width: 100%;
+  }
 }
 
 @media (max-height: 700px) {
